# ui-short-link/src/app/services/models.ts
@@ -5,6 +5,7 @@ export { CategoryResponse } from './models/category-response';
 export { LinkFilter } from './models/link-filter';
 export { LinkRequest } from './models/link-request';
 export { LinkResponse } from './models/link-response';
+export { LongLinkRedirectResponse } from './models/long-link-redirect-response';
 export { PageResponseLinkResponse } from './models/page-response-link-response';
 export { PageResponseUserResponse } from './models/page-response-user-response';
 export { UserAuthenticationRequest } from './models/user-authentication-request';
