# ui-short-link/src/app/services/models/user-authentication-request.ts
@@ -1,6 +1,6 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface UserAuthenticationRequest {
-  email: string;
   password: string;
+  username: string;
 }
